# traypp

./: CMakeLists.txt  README.md
example/simple/: CMakeLists.txt
tray/include/: tray.hpp
tray/include/core/: icon.hpp  image.hpp
tray/include/core/macos/: tray.hpp
tray/src/core/linux/: tray.cpp
tray/src/core/macos/: icon.mm  image.mm  tray.mm
